--- a/anExternal.css
+++ b/anExternal.css
@@ -48,3 +48,12 @@ body {
     height: 200px;
     
 }
+#rcorners {
+    border-radius: 25px;
+  border: 2px solid #0d1403;
+  padding: 20px; 
+  width: 200px;
+  height: 150px;
+  float: right;
+  
+}
